test new design

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,70 +1,30 @@
-{% if page.menubar or page.menubar_toc %}
-    {% assign has_left_sidebar = true %}
-{% endif %}
-
-{% if page.show_sidebar and has_left_sidebar  %} 
-    {% assign content_width = 'is-4' %} 
-{% elsif page.show_sidebar or has_left_sidebar %} 
-    {% assign content_width = 'is-8' %} 
-{% else %} 
-    {% assign content_width = 'is-12' %} 
-{% endif %}
+<!-- Control the width with, if sidebars or menus should appear   -->
+{% assign content_width = 'is-12' %}
 
 <!DOCTYPE html>
-<html id="default-layout" {% if site.fixed_navbar %} class="has-navbar-fixed-{{ site.fixed_navbar }}" {% endif %}>
-  {% include head.html %}
-  <body>
-    {% include header.html %}
-    {% unless page.hide_hero %}
-        {% include hero.html %}
-    {% endunless %}
-    {% include callouts.html %}
-    {% if page.abstract or page.select-audience %} 
-    <section class="section">
-        <div class="container">
-            {% include abstract.html %}
-            {% include select-audience.html %}
-        </div>
-    </section>
-    {% endif %}
-    <section class="section {% if page.style %} {{ page.style }} {% endif %}">
-        <div class="container">
-            <div class="columns is-6 is-variable">
-                {% if page.menubar_toc %}
-                <div class="column is-4-desktop is-4-tablet">
-                    {% assign contentsTitle = page.toc_title | default: 'Contents' %}
-                    {% include toc.html html=content class='menu-list' h_min=1 h_max=3 contents_title=contentsTitle %}
-                </div>
-                {% elsif page.menubar %}
-                <div class="column is-4-desktop is-4-tablet">
-                    {% include menubar.html %}
-                </div>
-                {% endif %}
-                <div class="column {{ content_width }}">
-                    {% include showcase.html %}
-                    {% include left-right-blocks.html %}
-                    {% include team.html %}
-                    {{ content }} 
-                </div>
-                {% if site.posts and page.show_sidebar %}
-                <div class="column is-4-desktop is-12-tablet">
-                    {% include latest-posts.html %}
-                </div>
-                {% endif %}
-            </div>
-        </div>
-    </section>
-    {% if page.latest_posts_below %}
-    <section class="section">
-        {% include latest-posts.html %}
-    </section>
-    {% endif %}
-    {% unless page.hide_footer %}
-        {% include footer.html %}
-    {% endunless %}
-    <script src="{{ site.baseurl }}/assets/js/app.js" type="text/javascript"></script>
-    {%- include footer-scripts.html -%}
-  </body>
+<html id="default-layout">
+    {% include head.html %}
+    <body>
+        {% include header.html %}
+        {% unless page.hide_hero %}
+            {% include hero.html %}
+        {% else %}
+            
+        {% endunless %}
+        <div class="has-background-primary-light">
+            {{content}}
+        </div> 
+        {% unless page.hide_footer %}
+            {% include footer.html %}
+        {% endunless %}
+    </body>
 </html>
 
 
+<!---
+TODOS:
+- Hero wird lighter
+- Headline muss farbe behalten
+- Headline rechtsbündig
+- ...
+-->
