--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1,25 +1,25 @@
+// Font
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url("https://fonts.googleapis.com/css?family=Verdana");
+$family-sans-serif: "Verdana", sans-serif;
 
-$family-sans-serif: 'Montserrat', sans-serif;
-$primary: #188eac !default;
+// Colors
+$primary: #d1e7d6 !default;
+$primary-light: #e7f2ea;
+$primary-dark: #1e7d73;
 
-$tabs-link-active-color: $primary;
-$tabs-link-active-border-bottom-color: $primary;
+//Bulma
+@import "../node_modules/bulma/bulma.sass";
+// Extensions
+@import "../node_modules/bulma-block-list/src/block-list.scss";
+
+// Config
 $column-gap: 1rem;
 $modal-content-width: 800px;
 
-@import "../node_modules/bulma/bulma.sass";
-$hero-darken: $dark !default;
+$tabs-link-active-color: $primary;
+$tabs-link-active-border-bottom-color: $primary;
 
 //Specific styles
 @import "layout";
-@import "syntax";
-@import "showcase";
-@import "about";
-@import "stories";
-@import "landing_page";
 @import "print";
-
-// Extensions
-@import "../node_modules/bulma-block-list/src/block-list.scss";
