--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer is-hidden-print">
+<footer class="footer is-hidden-print is-primary">
     <div class="container">
         {% if site.footer_menu %}
         <div class="columns is-multiline">
@@ -13,7 +13,7 @@
         {% endif %}
 
         <div class="content is-small has-text-centered">
-            <p class="">Theme is based on Bulma Clean Theme from <a href="https://www.csrhymes.com">C.S. Rhymes</a></p>
+            <p class="">Theme is based on Bulma Clean Theme from <a class="link" href="https://www.csrhymes.com">C.S. Rhymes</a></p>
         </div>
     </div>
 </footer>
