--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,7 @@
+<!--
+The Default layout that everything is using 
+-->
+
 <!-- Control the width with, if sidebars or menus should appear   -->
 {% assign content_width = 'is-12' %}
 
@@ -19,12 +23,3 @@
         {% endunless %}
     </body>
 </html>
-
-
-<!---
-TODOS:
-- Hero wird lighter
-- Headline muss farbe behalten
-- Headline rechtsbündig
-- ...
--->
