--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1,25 +1,69 @@
 // Font
 @charset "utf-8";
 @import url("https://fonts.googleapis.com/css?family=Verdana");
-$family-sans-serif: "Verdana", sans-serif;
+$family-primary: "Verdana", sans-serif;
 
 // Colors
 $primary: #d1e7d6 !default;
 $primary-light: #e7f2ea;
+$light: #e7f2ea;
 $primary-dark: #1e7d73;
+$dark: #1e7d73;
 
-//Bulma
+// Bulma
 @import "../node_modules/bulma/bulma.sass";
 // Extensions
 @import "../node_modules/bulma-block-list/src/block-list.scss";
 
-// Config
+// Bulma Config
 $column-gap: 1rem;
 $modal-content-width: 800px;
 
 $tabs-link-active-color: $primary;
 $tabs-link-active-border-bottom-color: $primary;
 
-//Specific styles
+// Global
+html * {
+  font-size: 24px;
+}
+h1 {
+  font-size: 2em;
+}
+h2 {
+  font-size: 1.5em;
+}
+h3 {
+  font-size: 1.17em;
+}
+h4 {
+  font-size: 1em;
+}
+h5 {
+  font-size: 0.83em;
+}
+.button.is-dark:hover,
+.button.is-dark.is-hovered {
+  border-width: 2px;
+  background-color: $primary;
+  border-color: $primary-dark;
+  color: $primary-dark;
+}
+.navbar-dropdown,
+.navbar-item:focus,
+.navbar-dropdown a.navbar-item:focus,
+.navbar-dropdown a.navbar-item:hover {
+  background-color: transparent;
+}
+.footer {
+  background-color: $primary-dark;
+  color: white;
+}
+.link {
+  color: $primary;
+}
+.footer .link {
+  color: white;
+}
+// Specific styles
 @import "layout";
 @import "print";
