--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@ The Default layout that everything is using
         {% else %}
             
         {% endunless %}
-        <div class="has-background-primary-light">
+        <div class="article-post has-background-primary-light">
             {{content}}
         </div> 
         {% unless page.hide_footer %}
