--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -62,3 +62,56 @@ div.highlight {
 .button.is-dark {
     background-color: #229387;
 }
+
+
+.subtitle {
+    padding: 50px;
+}
+
+.title.is-2 {
+    font-size: 3.5rem;
+}
+
+.hero-body .container .button {
+    float: right;
+}
+
+.hero-body .container .button::after {
+    content: " >";
+}
+
+.article-post {
+    padding: 3rem 6.5rem;
+}
+
+.article-post h1{
+    padding-top: 50px;
+}
+
+.article-post h1:nth-of-type(1){
+    text-align: center;
+}
+.article-post p:nth-of-type(1){
+    text-align: center;
+}
+
+.article-post img{
+    float: left;
+    width: 50%;
+    margin: 0 3rem 3rem;
+    border-radius: 65px;
+}
+.article-post img.right{
+    float: right;
+}
+
+.article-post p{
+    display: block;
+}
+
+.clear {
+    clear: both;
+    display: block;
+    height: 150px;
+    width: 100%;
+}
