--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -28,10 +28,11 @@ html * {
   font-size: 24px;
 }
 h1 {
-  font-size: 2em;
+  font-size: 3.5rem;  
+  font-weight: 600;
 }
 h2 {
-  font-size: 1.5em;
+  font-size: 2.5em;
 }
 h3 {
   font-size: 1.17em;
