--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -86,7 +86,7 @@ div.highlight {
 }
 
 .card {
-    padding: 3rem 6.5rem;
+    padding: 3rem 10rem;
     box-shadow: none;
     height: 600px;
 }
@@ -108,9 +108,10 @@ div.highlight {
 
 .article-post img{
     float: left;
-    width: 50%;
+    width: auto;
     margin: 0 5rem 3rem 0;
     border-radius: 65px;
+    height: 500px;
 }
 .article-post img.right{
     float: right;
