--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -26,27 +26,27 @@ html * {
     font-size: 16px;
 }
 
-h1 {
+h1, h1 p {
     font-size: 3.5rem;
     font-weight: 600;
 }
 
-h2 {
-    font-size: 1.5em;
+h2, h2 p {
+    font-size: 1.5rem;
     font-weight: 600;
     text-align: left;
 }
 
 h3 {
-    font-size: 1.17em;
+    font-size: 1.17rem;
 }
 
 h4 {
-    font-size: 1em;
+    font-size: 1rem;
 }
 
 h5 {
-    font-size: 0.83em;
+    font-size: 0.83rem;
 }
 
 .button.is-dark:hover,
@@ -55,6 +55,10 @@ h5 {
     background-color: $dark;
     border-color: $dark;
     color: $dark;
+}
+
+.navbar-brand a.navbar-item img {
+    margin-right: 15px;
 }
 
 .navbar-dropdown,
