Increase Size of Brandname

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="navbar-brand">
             <a href="{{ site.baseurl }}/" class="navbar-item">
                 <img src="https://via.placeholder.com/128x128">
-                {{ site.title }}
+                <h1 class="title is-4">{{ site.title }}</h1>
             </a>
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu"
                 :class="{ 'is-active': openNav }" x-on:click="openNav = !openNav">
