--- a/_includes/story-slider.html
+++ b/_includes/story-slider.html
@@ -1,5 +1,5 @@
 {% if page.left_right_layout %}
-    {% assign layout=site.data.[page.story_slieder] %}
+    {% assign layout=site.data.[page.story_slider] %}
     <div class="green"></div>
     <div class="card has-text-centered">
         <h1>Schnelleinstieg</h1>
