refactor story-slider and introduction and fix button text color on hover

--- a/_includes/story-slider.html
+++ b/_includes/story-slider.html
@@ -1,10 +1,3 @@
-{% if page.left_right_layout %}
-    {% assign layout=site.data.[page.story_slider] %}
+{% if page.story_slider %}
     <div class="green"></div>
-    <div class="card has-text-centered">
-        <h1>Schnelleinstieg</h1>
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean convallis ut augue id consequat. Mauris a nunc eget augue condimentum egestas et non ex. Suspendisse vulputate semper cursus. Morbi at sodales augue. Nulla ac dolor ligula. Nam nec viverra velit. Duis sodales nisl non leo fermentum, et iaculis arcu congue. Aliquam erat volutpat. Maecenas pretium libero nisl, sed ultrices sem commodo id. Morbi porttitor sem non fringilla maximus. Aliquam in odio eget urna fringilla pellentesque id sit amet ligula.</h3>
-    <br>
-    <br>
-    </div>
 {% endif %}
