--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,8 @@ The Default layout that everything is using
         {% endunless %}
         <div class="content-wrapper has-background-primary-light">
             
-            {% include story-slieder.html %}
+            {% include story-slider.html %}
+            {% include introduction.html %}
             {% include left-right-blocks.html %}
             {{content}}
         </div> 
