--- a/_includes/left-right-blocks.html
+++ b/_includes/left-right-blocks.html
@@ -13,7 +13,7 @@
                 <h2>{{ section.title | markdownify  }}</h2>
                     {{ section.text | markdownify  }}
                 
-                    <a href="{{ section.link | relative_url }}" class="navbar-item button is-rounded is-dark {% if item.link == page.url %}is-active{% endif %}">
+                    <a href="{{ section.link | relative_url }}" class="button is-rounded is-dark {% if item.link == page.url %}is-active{% endif %}">
                         <span>Mehr Lesen</span>
                         <span class="icon is-small">
                         <i class="fas fa-chevron-right"></i>
@@ -25,7 +25,7 @@
             <h2>{{ section.title | markdownify  }}</h2>
                 {{ section.text | markdownify  }}
             
-                <a href="{{ section.link | relative_url }}" class="navbar-item button is-rounded is-dark {% if item.link == page.url %}is-active{% endif %}">
+                <a href="{{ section.link | relative_url }}" class="button is-rounded is-dark {% if item.link == page.url %}is-active{% endif %}">
                     <span>Mehr Lesen</span>
                     <span class="icon is-small">
                     <i class="fas fa-chevron-right"></i>
