--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -127,7 +127,7 @@ div.highlight {
   height: 450px;
   width: auto;
 }
-h2 p {
+h2 {
   background-repeat: no-repeat;
   background-size: auto 35px;
 }
