--- a/_includes/left-right-blocks.html
+++ b/_includes/left-right-blocks.html
@@ -10,7 +10,7 @@
                 </figure>
             </div>
             <div class="card-content">
-                <h2 style="background-image:url('https://via.placeholder.com/64x64.jpg')">{{ section.title | markdownify  }}</h2>
+                <h2 class="fas {{ section.icon }} fa-2x">{{ section.title | markdownify  }}</h2>
                     {{ section.text | markdownify  }}
                 
                     <a href="{{ section.link | relative_url }}" class="button is-rounded is-dark {% if item.link == page.url %}is-active{% endif %}">
@@ -22,9 +22,8 @@
             </div>
         {% else %}
         <div class="card-content">
-            <h2 style="background-image:url('https://via.placeholder.com/64x64.jpg')">{{ section.title | markdownify  }}</h2>
+            <h2 class="fas {{ section.icon }} fa-2x">{{ section.title | markdownify  }}</h2>
                 {{ section.text | markdownify  }}
-            
                 <a href="{{ section.link | relative_url }}" class="button is-rounded is-dark {% if item.link == page.url %}is-active{% endif %}">
                     <span>Mehr Lesen</span>
                     <span class="icon is-small">
