--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,11 +1,11 @@
-<section class="hero is-primary is-hidden-print {% if page.hero_height %} {{ page.hero_height }} {% else %} is-large {% endif %}" {% if page.hero_background_image %} style="background: url('{{ page.hero_background_image }}') no-repeat center center; background-size: cover;" {% endif %}>
+<section class="hero is-primary is-hidden-print {% if page.hero_height %} {{ page.hero_height }} {% else %} is-medium {% endif %}" {% if page.hero_background_image %} style="background: url('{{ page.hero_background_image }}') no-repeat center center; background-size: cover;" {% endif %}>
     <div class="hero-body">
         <div class="container">
             <img src="https://via.placeholder.com/440x638" alt="placeholder"  class="is-rounded is-hidden-mobile">
             <h1 class="title is-3">{{ page.title }}</h1>
             <p class="subtitle is-4">{{ page.subtitle }}</p>
             {% if page.hero_link %}
-                <a href="{{ page.hero_link | relative_url }}" class="button is-rounded is-large is-dark">
+                <a href="{{ page.hero_link | relative_url }}" class="button is-rounded is-dark">
                     <span>{{ page.hero_link_text }}</span>
                     <span class="icon is-small">
                     <i class="fas fa-chevron-right"></i>
