--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -49,7 +49,9 @@ h4 {
 h5 {
   font-size: 0.83rem;
 }
-
+.button {
+  font-weight: 600;
+}
 .button.is-dark:hover,
 .button.is-dark.is-hovered {
   border-width: 2px;
