--- a/_includes/story-slider.html
+++ b/_includes/story-slider.html
@@ -1,3 +1,7 @@
 {% if page.story_slider %}
-    <div class="green"></div>
+    <div class="green">
+
+        <h1 class="title is-3 ">Aktuelles</h1>
+
+    </div>
 {% endif %}
