--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -5,6 +5,8 @@ $family-primary: "Verdana", sans-serif;
 // Colors
 //$primary: #d1e7d6 !default;
 $primary: #ffffff !default;
+$text: #000 !default;
+$title-color: #000 !default;
 //$primary-light: #e7f2ea;
 //$primary-light: #ffffff;
 $light: #e7f2ea;
