--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,37 +1,56 @@
 <footer class="footer is-hidden-print is-primary">
-    <div class="container">
-        {% if site.footer_menu %}
-        <div class="columns is-multiline">
-            {% for item in site.data[site.footer_menu] %}
-            <div class="column has-text-centered">
-                <div>
-                    <a href="{{ item.link | relative_url }}" class="link">{{ item.name }}</a>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-        {% endif %}
-        {% if site.data.navigation %}
-        <div class="columns">
-            {% for item in site.data.navigation %}
-                <div class="column has-text-centered">
-                    <a href="{{ subitem.link | relative_url }} " class="link"><strong>{{ item.name }}</strong></a>
-                    {% if item.dropdown %}
-                    <div class="columns">
-                        {% for subitem in item.dropdown %}
-                        <div class="column">
-                            <a href="{{ subitem.link | relative_url }}" class="link">{{ subitem.name }}</a>
-                        </div>
-                        {% endfor %}
-                    </div>                                            
-                {% endif %}
-                </div>
-            {% endfor %}
-        </div>
-        {% endif %}
+    <div class="container columns">
+        
+        <div class="column is-2">
+            <a href="intia.de"><u>www.intia.de</u></a>
+                <br>
+                TH-Köln | DITIS<br>
+                Campus Südstadt<br>
+                Ubierring 48<br>
+                50678 Köln
 
+        </div>
+        {% if site.data.navigation %}
+        <div class="column ">
+            <div class="columns">
+                {% for item in site.data.navigation %}
+                    <div class="column has-text-centered">
+                        <a href="{{ subitem.link | relative_url }} " class="link"><strong>{{ item.name }}</strong></a>
+                        {% if item.dropdown %}
+                        <div class="">
+                            {% for subitem in item.dropdown %}
+                            <div class="">
+                                <a href="{{ subitem.link | relative_url }}" class="link">{{ subitem.name }}</a>
+                            </div>
+                            {% endfor %}
+                        </div>                                            
+                    {% endif %}
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+        {% endif %}
+        {% if site.footer_menu %}
+        <div class="column is-2">
+            <div class="">
+                {% for item in site.data[site.footer_menu] %}
+                <div class="has-text-centered">
+                    <div>
+                        <a href="{{ item.link | relative_url }}" class="link">{{ item.name }}</a>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+        {% endif %}
+    </div>
+        <div class="content is-small has-text-centered footer-logos">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/TH_Koeln_Logo.svg">
+            <img src="https://dites.web.th-koeln.de/new/wp-content/uploads/2019/11/DITES_Logonebeneinander_cmyk_Okt2019.jpg">
+            <img src="https://www.bmbf.de/SiteGlobals/Frontend/Images/icons/_common/logo.svg;jsessionid=73771066A725D13D2D34C4D38E4A181D.live382?__blob=normal&v=3">
+        </div>
         <div class="content is-small has-text-centered">
             <p class="">INTIA, 2021</p>
         </div>
-    </div>
+    
 </footer>
