--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -175,8 +175,15 @@ img.is-rounded {
 // Footer
 
 .footer {  
-  margin-top: 10rem;
+  margin-top: 10rem;  
+  line-height: 1.25;
 }
 .footer-logos img {
   height: 100px;
+}
+.footer .title {
+  color: white;
+  text-decoration: underline;
+  font-weight: 600;  
+  font-size: 1rem;
 }
