--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,12 @@
 <footer class="footer is-hidden-print is-primary">
-    <div class="container columns is-centered">
-        
+    
+    <div class="container columns is-centered is-multiline is-bordered-bottom">
+        <div class="navbar-brand column is-full">
+            <a href="{{ site.baseurl }}/" class=" navbar-item">
+                <img src="https://via.placeholder.com/128x128">
+                <h1 class="title is-4">{{ site.title }}</h1>
+            </a>
+        </div>
         <div class="column is-2">
             <div class="title">www.intia.de</div>
                 TH-Köln | DITIS<br>
@@ -45,10 +51,16 @@
         </div>
         {% endif %}
     </div>
-        <div class="content is-small has-text-centered footer-logos">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/TH_Koeln_Logo.svg">
-            <img src="https://dites.web.th-koeln.de/new/wp-content/uploads/2019/11/DITES_Logonebeneinander_cmyk_Okt2019.jpg">
-            <img src="https://www.bmbf.de/SiteGlobals/Frontend/Images/icons/_common/logo.svg;jsessionid=73771066A725D13D2D34C4D38E4A181D.live382?__blob=normal&v=3">
+        <div class="columns content is-small has-text-centered footer-logos">
+            <div class="column has-text-right"><div class="page-owner">
+                <p class="has-text-left">Eine Seite von</p>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/TH_Koeln_Logo.svg">
+                <img src="../assets/img/logo-dites.png">
+            </div></div>
+            <div class="column has-text-left"><div class="page-sponsor">                
+                <p class="has-text-left">Gefördert von</p>
+                <img src="https://www.bmbf.de/SiteGlobals/Frontend/Images/icons/_common/logo.svg;jsessionid=73771066A725D13D2D34C4D38E4A181D.live382?__blob=normal&v=3">
+            </div></div>
         </div>
         <div class="content is-small has-text-centered">
             <p class="">INTIA, 2021</p>
